@@ -30,14 +30,14 @@ public interface GXml.DomCharacterData : GLib.Object,
 	 */
   public abstract string data { owned get; set; }
 
-  public virtual ulong length {
+  public virtual int length {
     get {
       Init.init ();
       if (this.data == null) return 0;
       return this.data.length;
     }
   }
-  public virtual string substring_data (ulong offset, ulong count) throws GLib.Error {
+  public virtual string substring_data (int offset, int count) throws GLib.Error {
     Init.init ();
     if (((int)offset) > this.data.length)
       throw new DomError.INDEX_SIZE_ERROR (_("Invalid offset for substring"));
@@ -49,15 +49,15 @@ public interface GXml.DomCharacterData : GLib.Object,
     Init.init ();
     this.data += data;
   }
-  public virtual void insert_data  (ulong offset, string data) throws GLib.Error {
+  public virtual void insert_data  (int offset, string data) throws GLib.Error {
     Init.init ();
     replace_data (offset, 0, data);
   }
-  public virtual void delete_data  (ulong offset, ulong count) throws GLib.Error {
+  public virtual void delete_data  (int offset, int count) throws GLib.Error {
     Init.init ();
     replace_data (offset, count, "");
   }
-  public new virtual void replace_data (ulong offset, ulong count, string data) throws GLib.Error {
+  public new virtual void replace_data (int offset, int count, string data) throws GLib.Error {
     Init.init ();
     if (((int)offset) > this.data.length)
       throw new DomError.INDEX_SIZE_ERROR (_("Invalid offset for replace data"));
@@ -68,7 +68,7 @@ public interface GXml.DomCharacterData : GLib.Object,
 }
 
 public interface GXml.DomText : GXml.DomCharacterData {
-  public virtual GXml.DomText split_text (ulong offset) throws GLib.Error {
+  public virtual GXml.DomText split_text (int offset) throws GLib.Error {
     Init.init ();
     if (offset >= data.length)
       throw new DomError.INDEX_SIZE_ERROR (_("Invalid offset to split text"));
