@@ -6,6 +6,7 @@ Version 0.13.0
 * Added XPath interfaces and initial implementation based on libxml2
 * Removed old DOM1 implementation on xNode/xDocument
 * API change on DomImplementation.with_ids () for DocumentType to DomDocumentType
+* API change changed long/ulong to int
 
 ===============
 Version 0.12.0
